goose etc.
Adds goose for db changes
API changes to series
